@@ -1206,6 +1206,108 @@ name|e
 argument_list|)
 expr_stmt|;
 block|}
+comment|// before looping over each core, let's check the names and fail
+comment|// fast if the same one is reused multiple times.
+block|{
+comment|// local scope, won't need these vars again
+name|NodeList
+name|nodes
+init|=
+operator|(
+name|NodeList
+operator|)
+name|cfg
+operator|.
+name|evaluate
+argument_list|(
+literal|"solr/cores/core/@name"
+argument_list|,
+name|XPathConstants
+operator|.
+name|NODESET
+argument_list|)
+decl_stmt|;
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|names
+init|=
+operator|new
+name|HashSet
+argument_list|<
+name|String
+argument_list|>
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|nodes
+operator|.
+name|getLength
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|String
+name|name
+init|=
+name|DOMUtil
+operator|.
+name|getText
+argument_list|(
+name|nodes
+operator|.
+name|item
+argument_list|(
+name|i
+argument_list|)
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|names
+operator|.
+name|contains
+argument_list|(
+name|name
+argument_list|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+literal|"Multiple cores found with same name: "
+operator|+
+name|name
+argument_list|)
+throw|;
+block|}
+name|names
+operator|.
+name|add
+argument_list|(
+name|name
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 name|NodeList
 name|nodes
 init|=
@@ -1222,11 +1324,6 @@ name|XPathConstants
 operator|.
 name|NODESET
 argument_list|)
-decl_stmt|;
-name|boolean
-name|defaultCoreFound
-init|=
-literal|false
 decl_stmt|;
 for|for
 control|(
@@ -1274,18 +1371,11 @@ argument_list|)
 decl_stmt|;
 if|if
 condition|(
+literal|null
+operator|==
 name|name
-operator|.
-name|equals
-argument_list|(
-name|defaultCoreName
-argument_list|)
 condition|)
 block|{
-if|if
-condition|(
-name|defaultCoreFound
-condition|)
 throw|throw
 operator|new
 name|SolrException
@@ -1296,13 +1386,23 @@ name|ErrorCode
 operator|.
 name|SERVER_ERROR
 argument_list|,
-literal|"Only one 'DEFAULT_CORE' is allowed "
+literal|"Each core in solr.xml must have a 'name'"
 argument_list|)
 throw|;
-name|defaultCoreFound
-operator|=
-literal|true
-expr_stmt|;
+block|}
+if|if
+condition|(
+name|name
+operator|.
+name|equals
+argument_list|(
+name|defaultCoreName
+argument_list|)
+condition|)
+block|{
+comment|// for the default core we use a blank name,
+comment|// later on attempts to access it by it's full name will
+comment|// be mapped to this.
 name|name
 operator|=
 literal|""
